--- a/piedrapapelytijera.html
+++ b/piedrapapelytijera.html
@@ -3,7 +3,7 @@
    <head>
     <meta charset="uft-8"/>
         <title>Piedra, papel o tijera</title>
-        <script scr="js/codigo.js" ></script> 
+        <script src="js/codigo.js" ></script> 
       <head>
       <body>
         <h1>Piedra, papel o tijera</h1> 
