--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -26,8 +26,8 @@
         <section id="seleccionar-ataque">
            <h2>Elige tu ataque:</h2>
 
-           <p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p> 
-           <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
+           <p>Tu mascota <span id="vidas-jugador"></span> tiene <span>3</span> vidas</p> 
+           <p>La mascota <span id="vidas-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
 
             <p>
                 <button id="boton-fuego">Fuego 🔥</button>
