--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -36,25 +36,33 @@
         </section>
 
         <section id="seleccionar-ataque">
-           <h1 class="titulo">MOKEPON!🔥💧🌼</h1>
+           <h1 class="titulo">MOKEPON!</h1>
 
-           <h2>Elige tu ataque:</h2>
+           <h2 class="subtitulo">Elige tu ataque:</h2>
 
+           <div>
+            <button id="boton-fuego" class="boton-de-ataque">Fuego 🔥</button>
+            <button id="boton-agua" class="boton-de-ataque">Agua 💧</button>
+            <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
+           </div>
+
+           <div>
+           <section id="mensajes">
+            </section>
+
+            <p id="resultado"></p>
+            <div id="ataques-del-jugador"></div>
+            <div id="ataques-del-enemigo"></div>
+
+        <section id="reiniciar">
+               <button id="boton-reiniciar">Reiniciar</button>
+            </section>
+           </div>
+
+           <div>
            <p>Tu mascota tiene <span id="vidas-jugador">3</span> vidas</p> 
            <p>La mascota del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
-
-            <p>
-                <button id="boton-fuego">Fuego 🔥</button>
-                <button id="boton-agua">Agua 💧</button>
-                <button id="boton-tierra">Tierra🌼</button>
-            </p>
+           </div>
         </section>
-
-        <section id="mensajes">
-         </section>
-
-         <section id="reiniciar">
-            <button id="boton-reiniciar">Reiniciar</button>
-         </section>
-          </body>
+    </body>
 </html>
