fix: append childs

--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -47,8 +47,7 @@
            </div>
 
            <div>
-           <section id="mensajes">
-            </section>
+           <section id="mensajes"></section>
 
             <p id="resultado"></p>
             <div id="ataques-del-jugador"></div>
@@ -60,8 +59,8 @@
            </div>
 
            <div>
-           <p>Tu mascota tiene <span id="vidas-jugador">3</span> vidas</p> 
-           <p>La mascota del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+           <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p> 
+           <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
            </div>
         </section>
     </body>
