--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -48,23 +48,28 @@
       <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
     </div>
 
-    <div>
-      <section id="mensajes"></section>
+      <div id="mensajes">
+        <p id="resultado">Mucha suerte</p>
 
-      <p id="resultado"></p>
-      <div id="ataques-del-jugador"></div>
-      <div id="ataques-del-enemigo"></div>
-
-      <section id="reiniciar">
-        <button id="boton-reiniciar">Reiniciar</button>
-      </section>
+        <section id="reiniciar">
+            <button id="boton-reiniciar">Reiniciar</button>
+        </section>
     </div>
 
-    <div>
-      <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-      <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+    <div class="ataques">
+        <div>
+            <p id="vidas-jugador">3</p>
+            <p id="mascota-jugador"></p>
+           <div id="ataques-del-jugador"></div>
+           
+        </div>
+        <div>
+            <p id="vidas-enemigo">3</p>
+            <p id="mascota-enemigo"></p>
+           <div id="ataques-del-enemigo"></div>
+          
+        </div>
     </div>
   </section>
 </body>
-
 </html>
