--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -13,24 +13,8 @@
 
     <h2 class="subtitulo">Elige tu mascota:</h2>
 
-    <div class="tarjetas">
-      <input type="radio" name="mascota" id="hipodoge" />
-      <label class="tarjeta-de-mokepon" for="hipodoge">
-        <p>Hipodoge</p>
-        <img src="./assests/mokepons_mokepon_hipodoge_attack.png" alt="Hipodoge">
-      </label>
-
-      <input type="radio" name="mascota" id="capipepo" />
-      <label class="tarjeta-de-mokepon" for="capipepo">
-        <p>Capipepo</p>
-        <img src="./assests/mokepons_mokepon_capipepo_attack.png" alt="Capipepo">
-      </label>
-
-      <input type="radio" name="mascota" id="ratigueya" />
-      <label class="tarjeta-de-mokepon" for="ratigueya">
-        <p>Ratigueya</p>
-        <img src="./assests/mokepons_mokepon_ratigueya_attack.png" alt="Ratigueya">
-      </label>
+    <div id="contenedorTarjetas" class="tarjetas">
+      
     </div>
 
     <button id="boton-mascota">Seleccionar</button>
@@ -41,10 +25,8 @@
 
     <h2 class="subtitulo">Elige tu ataque:</h2>
 
-    <div class="tarjetas-ataques">
-      <button id="boton-fuego" class="boton-de-ataque">Fuego 🔥</button>
-      <button id="boton-agua" class="boton-de-ataque">Agua 💧</button>
-      <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
+    <div id="contenedorAtaques" class="tarjetas-ataques">
+     
     </div>
 
       <div id="mensajes">
