--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -20,6 +20,11 @@
     <button id="boton-mascota">Seleccionar</button>
   </section>
 
+  <section id="ver-mapa">
+    <h1 class="titulo">Recorre el mapa con tu mokepon</h1>
+    <canvas id="mapa"></canvas>
+  </section>
+
   <section id="seleccionar-ataque">
     <h1 class="titulo">MOKEPON!</h1>
 
