--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -25,7 +25,7 @@
     <canvas id="mapa"></canvas>
     <button onmouseup="detenerMovimiento()" onmousedown="moverArriba()">Arriba</button>
     <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Izquierda</button>
-    <butto onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Abajo</button>
+    <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Abajo</button>
     <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Derecha</button>
   </section>
 
