--- a/mokepon/public/index.html
+++ b/mokepon/public/index.html
@@ -24,13 +24,34 @@
   <section id="ver-mapa">
     <h2 class="subtitulo">Recorre el mapa 🗺️ </h2>
     <canvas id="mapa"></canvas>
-    <button onmouseup="detenerMovimiento()" onmousedown="moverArriba()">Arriba</button>
-    <div>
-      <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Izquierda</button>
-      <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Abajo</button>
-      <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Derecha</button>
-    </div>
-  </section>
+    <button
+    ontouchend="detenerMovimiento()"  
+    onmouseup="detenerMovimiento()" 
+    onmousedown="moverArriba()"
+    ontouchstart="moverArriba()" 
+>Arriba</button>
+<div>
+    <button 
+        onmouseup="detenerMovimiento()"
+        ontouchend="detenerMovimiento()" 
+        onmousedown="moverIzquierda()"
+        ontouchstart="moverIzquierda()"
+    >Izquierda</button>
+    <button 
+        onmouseup="detenerMovimiento()"
+        ontouchend="detenerMovimiento()" 
+        onmousedown="moverAbajo()"
+        ontouchstart="moverAbajo()"
+    >Abajo</button>
+    <button 
+        onmouseup="detenerMovimiento()"
+        ontouchend="detenerMovimiento()" 
+        onmousedown="moverDerecha()"
+        ontouchstart="moverDerecha()"
+    >Derecha</button>
+</div>
+</section>
+
 
   <section id="seleccionar-ataque">
     <h1 class="titulo">MOKEPON!</h1>
@@ -64,7 +85,7 @@
       </div>
     </div>
   </section>
-  <script src="./js/mokepon.js"></script>
+  <script src="./mokepon.js"></script>
 </body>
 
 </html>
