reubicacion de archivos

--- a/mokepon/public/index.html
+++ b/mokepon/public/index.html
@@ -85,7 +85,7 @@
       </div>
     </div>
   </section>
-  <script src="./mokepon.js"></script>
+  <script src="./js/mokepon.js"></script>
 </body>
 
 </html>
